--- a/DotnetCoreServer.csproj
+++ b/DotnetCoreServer.csproj
@@ -2,17 +2,17 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
     <RuntimeIdentifiers>win10-x64;osx.10.11-x64</RuntimeIdentifiers>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0"/>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0-preview2-final"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0-preview2-final"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0-preview2-final"/>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="1.1.0"/>
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.0"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.0"/>
     <PackageReference Include="MySqlConnector" Version="0.22.0"/>
   </ItemGroup>
   <ItemGroup>
